--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/platformio,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=platformio,macos
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,platformio,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,platformio,macos
 
 ### macOS ###
 # General
@@ -41,4 +41,23 @@ Temporary Items
 .gcc-flags.json
 .pio
 
-# End of https://www.toptal.com/developers/gitignore/api/platformio,macos
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,platformio,macos
