--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,6 @@ platform = espressif32
 framework = arduino
 board = upesy_wroom
 monitor_speed = 115200
+lib_deps =
+    adafruit/Adafruit SSD1306 @ ^2.5.7
+    adafruit/Adafruit GFX Library @ ^1.10.13
